--- a/stack.yaml
+++ b/stack.yaml
@@ -10,9 +10,11 @@ extra-deps:
  - pretty-1.1.3.6
  - logfloat-0.13.3.3
  - optparse-applicative-0.14.3.0
+ - repline-0.4.0.0
+ - haskeline-0.8.1.1
 
  # This pulls in about 5 additional transitive dependencies (building Cabal still takes 
  # about 80% of the compile time for the dependencies, total...)
  - tasty-hunit-adapter-1.1
 
-allow-newer: true
+allow-newer: false
